--- a/about-us.html
+++ b/about-us.html
@@ -91,7 +91,7 @@
     <div class="main-container w-container">
       <div class="about-hero-container">
         <h1 class="page-title font-color-white">
-          <img src="images/ecoIntell.svg" loading="lazy" alt="" class="ecologo">
+          <img src="images/ecointell.png" loading="lazy" alt="" class="ecologo">
         </h1>
         <div class="h6 font-color-white">Consultoría Ambiental y Energía Renovable</div>
       </div>
