--- a/services2.html
+++ b/services2.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>ECO-INTELL | Consultoría Ambiental y Energía Renovable</title>
+  <meta property="og:image" content="images/logo2.png" />
   <meta name="keywords" content="Consultoría Ambiental, Energía Renovable, Desarrollo Sostenible, Gestión de Proyectos, Tecnologías de la Información, Sostenibilidad Empresarial, Soluciones Innovadoras">
   <meta content="Bienvenidos a ECO-INTELL, tu socio en consultoría ambiental, energía renovable y tecnologías de la información. Impulsamos la sostenibilidad en cada proyecto, combinando ciencia y tecnología para soluciones económica, social y ambientalmente viables." name="description">
   <meta content="ECO-INTELL | Consultoría Ambiental y Energía Renovable" property="og:title">
