--- a/index.html
+++ b/index.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
 <!--  Last Published: Tue Aug 29 2023 17:55:41 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="64eb9bf719b3764ab9308c9c" data-wf-site="64eb9bf719b3764ab9308c2b">
+<html>
 <head>
   <meta charset="utf-8">
   <title>ECO-INTELL | Consultoría Ambiental y Energía Renovable</title>
-  <meta property="og:image" content="images/logo2.png"/>
-  <meta name="keywords" content="Consultoría Ambiental, Energía Renovable, Desarrollo Sostenible, Gestión de Proyectos, Tecnologías de la Información, Sostenibilidad Empresarial, Soluciones Innovadoras">
-  <meta content="Bienvenidos a ECO-INTELL, tu socio en consultoría ambiental, energía renovable y tecnologías de la información. Impulsamos la sostenibilidad en cada proyecto, combinando ciencia y tecnología para soluciones económica, social y ambientalmente viables." name="description">
-  <meta content="ECO-INTELL | Consultoría Ambiental y Energía Renovable" property="og:title">
-  <meta content="Bienvenidos a ECO-INTELL, tu socio en consultoría ambiental, energía renovable y tecnologías de la información. Impulsamos la sostenibilidad en cada proyecto, combinando ciencia y tecnología para soluciones económica, social y ambientalmente viables." property="og:description">
-  <meta content="" property="og:image">
-  <meta content="ECO-INTELL | Consultoría Ambiental y Energía Renovable" property="twitter:title">
-  <meta content="Bienvenidos a ECO-INTELL, tu socio en consultoría ambiental, energía renovable y tecnologías de la información. Impulsamos la sostenibilidad en cada proyecto, combinando ciencia y tecnología para soluciones económica, social y ambientalmente viables." property="twitter:description">
-  <meta content="" property="twitter:image">
-  <meta property="og:type" content="website">
-  <meta content="summary_large_image" name="twitter:card">
-  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <meta property="og:title" content="ECO-INTELL | Consultoría Ambiental y Energía Renovable">
+  <meta name="twitter:title" content="ECO-INTELL | Consultoría Ambiental y Energía Renovable">
+  
+  <meta name="description" content="Bienvenidos a ECO-INTELL, tu socio en consultoría ambiental, energía renovable y tecnologías de la información. Impulsamos la sostenibilidad en cada proyecto, combinando ciencia y tecnología para soluciones económica, social y ambientalmente viables.">
+  <meta property="og:description" content="Bienvenidos a ECO-INTELL, tu socio en consultoría ambiental, energía renovable y tecnologías de la información. Impulsamos la sostenibilidad en cada proyecto, combinando ciencia y tecnología para soluciones económica, social y ambientalmente viables.">
+  <meta name="twitter:description" content="Bienvenidos a ECO-INTELL, tu socio en consultoría ambiental, energía renovable y tecnologías de la información. Impulsamos la sostenibilidad en cada proyecto, combinando ciencia y tecnología para soluciones económica, social y ambientalmente viables.">
+  
+  <meta property="og:image" content="https://i.ibb.co/j55h6mq/icon.png">
+  <meta name="twitter:image" content="https://i.ibb.co/j55h6mq/icon.png">
+
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/eco-intell.webflow.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
+  
+  <link href="https://i.ibb.co/j55h6mq/icon.png" rel="shortcut icon" type="image/x-icon">
+  <link href="https://i.ibb.co/j55h6mq/icon.png" rel="apple-touch-icon">
+  <link rel="image_src" href="https://i.ibb.co/j55h6mq/icon.png" />
+
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Plus Jakarta Sans:200,300,regular,500,600,700,800"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/logo2.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="images/logo2.png" rel="apple-touch-icon">
+  
 </head>
 <body>
   <div class="navbar-wrapper">
