--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="hero-slide-content-wrapper">
               <div class="hero-slide-text-container">
                 <div class="hero-slide-text-wrapper">
-                  <h1 class="display"><img src="images/ecoIntell.svg" loading="lazy" alt="" class="ecologo"></h1>
+                  <h1 class="display"><img src="images/ecoIntell.png" loading="lazy" alt="" class="ecologo"></h1>
                   <p class="paragraph-big"> Nuestra empresa se especializa en brindar servicios de consultoría y asesoramiento en las áreas de Ciencias Ambientales, Energía Limpia/Renovable y Tecnologías de la Información</p>
                   <div class="hero-slide-btn">
                     <a href="about-us.html" class="btn filled-v2 w-button">Descubre más</a>
