--- a/about-us.html
+++ b/about-us.html
@@ -458,10 +458,10 @@
           </div>
         </div>
         <div class="footer-block">
-          <div class="h6 font-color-white">Privacidad</div>
+          <div class="h6 font-color-white"></div>
           <div class="footer-columns-wrapper">
             <div class="footer-column">
-              <a href="template-info/license.html" class="footer-link">Privacidad</a>
+              <a href="template-info/license.html" class="footer-link"></a>
             </div>
           </div>
         </div>
