--- a/index.html
+++ b/index.html
@@ -30,8 +30,23 @@
   <link href="https://i.ibb.co/j55h6mq/icon.png" rel="apple-touch-icon">
   <link rel="image_src" href="https://i.ibb.co/j55h6mq/icon.png" />
 
+  <style>
+    /* Style for the floating button */
+    .language-button {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #00afa4;
+      color: #fff;
+      padding: 20px 20px;
+      border: 4px #00756d;
+      cursor: pointer;
+      z-index: 99;
+    }
+  </style>
 </head>
 <body class="text-scale">
+  <a class="btn filled-v2 w-button language-button" href="index_en.html">English 🇬🇧</a>
   <div class="navbar-wrapper">
     <div class="header">
       <div class="main-container w-container">
