changed phone numbers

--- a/contact_en.html
+++ b/contact_en.html
@@ -44,6 +44,9 @@
             <a href="tel:228-253-2474" class="header-link-block w-inline-block"><img src="images/Phone.svg" loading="lazy" alt="" class="header-link-icon">
               <div>228-253-2474</div>
             </a>
+            <a href="tel:228-104-6024" class="header-link-block w-inline-block"><img src="images/Phone.svg" loading="lazy" alt="" class="header-link-icon">
+              <div>228-104-6024</div>
+            </a>
             <a href="mailto:rafaelpatino@eco-intell.com" class="header-link-block w-inline-block"><img src="images/Mail.svg" loading="lazy" alt="" class="header-link-icon">
               <div>rafaelpatino@eco-intell.com</div>
             </a>
@@ -142,8 +145,11 @@
             <div class="contact-link-block address"><img src="images/Address.svg" loading="lazy" alt="Ícono de dirección" class="contact-link-icon">
               <div>Xalapa Veracruz</div>
             </div>
-            <a href="tel:(921)425-4567" class="contact-link-block w-inline-block"><img src="images/Phone_1.svg" loading="lazy" alt="Ícono de teléfono" class="contact-link-icon">
+            <a href="tel:(228)253-2474" class="contact-link-block w-inline-block"><img src="images/Phone_1.svg" loading="lazy" alt="Ícono de teléfono" class="contact-link-icon">
               <div>228-253-2474</div>
+            </a>
+            <a href="tel:(282)104-6024" class="contact-link-block w-inline-block"><img src="images/Phone_1.svg" loading="lazy" alt="Ícono de teléfono" class="contact-link-icon">
+              <div>282-104-6024</div>
             </a>
             <a href="mailto:info@domain.com" class="contact-link-block w-inline-block"><img src="images/Email.svg" loading="lazy" alt="Ícono de correo electrónico" class="contact-link-icon">
               <div>rafaelpatino@eco-intell.com</div>
@@ -218,11 +224,11 @@
           <div class="h6 font-color-white">Contact</div>
           <div class="footer-columns-wrapper">
             <div class="footer-button-wrapper">
-              <a href="tel:228-253-2474" class="btn with-lite-border w-inline-block">
-                <div class="btn-icon w-embed"><svg width="15" height="13" viewbox="0 0 15 13" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M13.8158 8.55948C12.8905 8.55948 11.9842 8.43427 11.1253 8.18863C10.706 8.06342 10.23 8.15989 9.95448 8.40348L8.25159 9.51806C6.29764 8.61423 5.04711 7.53111 4.01844 5.85L5.26974 4.40906C5.58474 4.13606 5.69765 3.73647 5.56265 3.36221C5.27685 2.613 5.1316 1.82684 5.1316 1.02632C5.1316 0.460463 4.60029 0 3.94738 0H1.18421C0.531304 0 0 0.460463 0 1.02632C0 7.62826 6.19816 13 13.8158 13C14.4687 13 15 12.5395 15 11.9737V9.5858C15 9.01994 14.4687 8.55948 13.8158 8.55948Z" fill="currentColor"></path>
-                  </svg></div>
-                <div>228-253-2474</div>
+              <a class="contact-link-block w-inline-block"><img src="images/Phone_1.svg" loading="lazy" alt="Ícono de teléfono" class="contact-link-icon">
+                <div>Tel: 228-253-2474</div>
+              </a>
+              <a class="contact-link-block w-inline-block"><img src="images/Phone_1.svg" loading="lazy" alt="Ícono de teléfono" class="contact-link-icon">
+                <div>Tel: 282-104-6024</div>
               </a>
               <a href="mailto:RafaelPatino@eco-intell.com" class="btn with-lite-border w-inline-block">
                 <div>RafaelPatino@eco-intell.com</div>
