--- a/detail_post.html
+++ b/detail_post.html
@@ -41,6 +41,9 @@
             <a href="tel:228-253-2474" class="header-link-block w-inline-block"><img src="images/Phone.svg" loading="lazy" alt="" class="header-link-icon">
               <div>228-253-2474</div>
             </a>
+            <a href="tel:228-104-6024" class="header-link-block w-inline-block"><img src="images/Phone.svg" loading="lazy" alt="" class="header-link-icon">
+              <div>228-104-6024</div>
+            </a>
             <a href="mailto:rafaelpatino@eco-intell.com" class="header-link-block w-inline-block"><img src="images/Mail.svg" loading="lazy" alt="" class="header-link-icon">
               <div>rafaelpatino@eco-intell.com</div>
             </a>
